tests/negative/gold/break_continue_test.gold
tests/negative/break_continue_test.toit:7:9: error: 'break' can't break out of lambda
    (:: break).call
        ^~~~~
tests/negative/break_continue_test.toit:7:6: note: Location of the lambda that 'break' would break out of
    (:: break).call
     ^~~~~~~~
tests/negative/break_continue_test.toit:8:9: error: 'continue' can't break out of lambda
    (:: continue).call
        ^~~~~~~~
tests/negative/break_continue_test.toit:8:6: note: Location of the lambda that 'continue' would break out of
    (:: continue).call
     ^~~~~~~~~~~
tests/negative/break_continue_test.toit:9:3: error: Unresolved identifier: 'unresolved'
  unresolved
  ^~~~~~~~~~
tests/negative/break_continue_test.toit:14:11: error: 'break' can't break out of lambda
      (:: break).call
          ^~~~~
tests/negative/break_continue_test.toit:14:8: note: Location of the lambda that 'break' would break out of
      (:: break).call
       ^~~~~~~~
tests/negative/break_continue_test.toit:15:11: error: 'continue' can't break out of lambda
      (:: continue).call
          ^~~~~~~~
tests/negative/break_continue_test.toit:15:8: note: Location of the lambda that 'continue' would break out of
      (:: continue).call
       ^~~~~~~~~~~
tests/negative/break_continue_test.toit:16:7: error: Unresolved identifier: 'unresolved'
      unresolved
      ^~~~~~~~~~
tests/negative/break_continue_test.toit:21:3: error: 'break' must be inside loop
  break
  ^~~~~
tests/negative/break_continue_test.toit:22:3: error: 'continue' must be inside loop
  continue
  ^~~~~~~~
tests/negative/break_continue_test.toit:23:3: error: Unresolved identifier: 'unresolved'
  unresolved
  ^~~~~~~~~~
Compilation failed.
